# factbase

./: .gitignore  .task-version  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FACTBASE_PLAN.md  LICENSE  README.md  SECURITY.md  TESTING.md  VERSION  auto-dev.sh  build.rs  perspective.yaml  tasks.md  tasks_old.md  test-onboarding.sh
.factbase/: factbase.db
.github/workflows/: ci.yml  issues.yml  release.yml
.kiro/settings/: lsp.json
.kiro/steering/: architecture.md  coding-conventions.md  current-state.md  domain-agnostic.md  fact-format.md  general.md  git-commits.md  module-interactions.md
benches/: links.rs  parsing.rs  search.rs
benchmarks/: phase6-comparison.md
docs/: agent-authoring-guide.md  agent-integration.md  architecture-review.md  audit-dead-code.md  audit-happy-path.md  audit-maintenance-path.md  audit-optimization.md  authoring-guide.md  citation-ab-test.md  citation-alignment-jazz.md  citation-alignment-verify.md  citation-autostamp-test.md  citation-e2e-jazz-v2.md  citation-e2e-mars-v2.md  citation-e2e-mars.md  citation-e2e-pipeline.md  citation-e2e-volcanoes-v2.md  citation-edge-cases.md  citation-marker-test.md  citation-retest-prod.md  citation-test-jazz.md  citation-test-prod.md  citation-test-volcanoes.md  citation-tier1-accuracy.md  citation-tier2-music.md  citation-tier3-resolve.md  citation-validation-report.md  cli-reference.md  deferred-analysis.md  deferred-report-post-fix.md  fact-document-format.md  inference-providers.md  kb-test-jazz.md  kb-test-mars.md  kb-test-volcanoes.md  obsidian-footnotes-in-callout-test.md  obsidian.md  plan-agent-driven-architecture.md  prod-question-deep-analysis.md  prompt-eval-v2-results.md  (+39 more)
docs/audits/: check-api.md  database-api.md  processor-api.md
docs/benchmarks/: binary-size-audit.md
docs/eval/: author-verification-tests.md
docs/prompts/: answer-application.md  cross-validate.md  question-generation.md
examples/: company.md  config.yaml  person.md  perspective.yaml
examples/sample-knowledge-base/: README.md  perspective.yaml
npm/: .gitignore
npm/factbase-darwin-arm64/: package.json
npm/factbase-darwin-x64/: package.json
npm/factbase-linux-x64/: package.json
npm/factbase-win32-x64/: package.json
scripts/: backup-db.sh  create-v2-eval-tasks-haiku.sh  create-v2-eval-tasks-opus.sh  create-v2-eval-tasks-sonnet.sh  npm-publish.sh  profile_scan.sh  release-build.sh  rollback-phase6.sh  setup-test-env.sh  test-all.sh  test-integration.sh  test-perf.sh  test-unit.sh  validate-readme.sh
src/: async_helpers.rs  bedrock.rs  cache.rs  config.rs  database.rs  embedding.rs  embeddings_io.rs  error.rs  lib.rs  link_detection.rs  llm.rs  local_embedding.rs  main.rs  models.rs  ollama.rs  output.rs  patterns.rs  processor.rs  progress.rs  scanner.rs  shutdown.rs  watcher.rs  write_guard.rs
tasks/: cross-conflict.md  mcp-transport.md  phase1.md  phase2.md  phase3.md  phase4.md  phase45.md  phase46.md  phase47.md  phase48.md  phase49.md  phase50-web.md  tasks.md  tasks_old.md
tests/: benchmarks.rs  chunking_integration.rs  cli.rs  compression_roundtrip.rs  concurrent_stress.rs  data_integrity.rs  edge_cases.rs  error_recovery.rs  full_scan_e2e.rs  links_and_facts_e2e.rs  mcp_e2e.rs  mcp_integration.rs  multi_repo_e2e.rs  multi_repo_integration.rs  ollama_integration.rs  performance.rs  review_workflow.rs  serve_e2e.rs  stability.rs  test-mcp-idle-timeout.sh  test_context_perspective.rs  watcher_e2e.rs  watcher_integration.rs
tools/: migrate-to-obsidian.py
web/: build.sh  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
(+379 files in other folders)
