[package]
name = "factbase"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
regex = "1"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
glob = "0.3"
dirs = "5"
shellexpand = "3"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
sqlite-vec = "0.1"
zerocopy = "0.7"
notify = "6"
notify-debouncer-mini = "0.4"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

[dev-dependencies]
tempfile = "3"
